vpc.tf
resource "aws_vpc" "default" {
  cidr_block           = var.vpc_cidr
  enable_dns_hostnames = true

  tags = merge(
    var.tags,
    {
      "Name"    = "${var.name}-VPC",
      "EnvName" = var.name
    }
  )
}

resource "aws_internet_gateway" "default" {
  vpc_id = aws_vpc.default.id

  tags = merge(
    var.tags,
    {
      "Name" = "${var.name}-IG"
    }
  )
}
